--- a/client/client.html
+++ b/client/client.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
     <title>Our simple HTTP server</title>
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <link
