general bug fixing

--- a/client/client.html
+++ b/client/client.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Our simple HTTP server</title>
+    <title>Games</title>
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
